fix jupyterbook version

--- a/ai4sc0/pytorch_base.ipynb
+++ b/ai4sc0/pytorch_base.ipynb
@@ -5,7 +5,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Pytorch基础"
+    "# Pytorch基础 \n",
+    "\n",
+    "## 基础 \n",
+    "我们这里展示一些Pytorch的基础操作。"
    ]
   },
   {
