--- a/ai4sc0/pytorch_example1_numpy.ipynb
+++ b/ai4sc0/pytorch_example1_numpy.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python 例2: 基于PyTorch的基本操作\n",
+    "# 基于PyTorch的基本操作\n",
     "\n",
     "这个例子和前一个例子几乎一样，唯一的不同在于我们将NumPy换成了PyTorch。因为PyTorch已经支持了NumPy的大部分功能，而且在CPU上进行计算时，速度并不慢于numpy，而且还支持可微分、可函数变换、可GPU加速等功能，所以大家写数值代码时完全可以直接基于Pytorch而非Numpy。"
    ]
