update neural operator

--- a/ai4sc0/references.bib
+++ b/ai4sc0/references.bib
@@ -53,3 +53,17 @@
   year      = {2008},
   publisher = {O'Reilly Media}
 }
+
+@article{lu2019deeponet,
+  title={Deeponet: Learning nonlinear operators for identifying differential equations based on the universal approximation theorem of operators},
+  author={Lu, Lu and Jin, Pengzhan and Karniadakis, George Em},
+  journal={arXiv preprint arXiv:1910.03193},
+  year={2019}
+}
+
+@article{li2020fourier,
+  title={Fourier neural operator for parametric partial differential equations},
+  author={Li, Zongyi and Kovachki, Nikola and Azizzadenesheli, Kamyar and Liu, Burigede and Bhattacharya, Kaushik and Stuart, Andrew and Anandkumar, Anima},
+  journal={arXiv preprint arXiv:2010.08895},
+  year={2020}
+}
