--- a/_sources/python_example2_vs_matlab.ipynb
+++ b/_sources/python_example2_vs_matlab.ipynb
@@ -55,13 +55,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
-    "N=25\n",
+    "N=3*4*5\n",
     "a=np.ones((N,N))\n",
     "b=np.arange(0,N)"
    ]
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -84,42 +84,215 @@
      "text": [
       "vector B:\n",
       " [ 0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23\n",
-      " 24]\n",
-      "matrix B:\n",
-      " [[ 0  1  2  3  4]\n",
-      " [ 5  6  7  8  9]\n",
-      " [10 11 12 13 14]\n",
-      " [15 16 17 18 19]\n",
-      " [20 21 22 23 24]]\n",
-      "matrix B part:\n",
-      " [[ 6  7  8]\n",
-      " [11 12 13]\n",
-      " [16 17 18]]\n"
+      " 24 25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47\n",
+      " 48 49 50 51 52 53 54 55 56 57 58 59]\n",
+      "tensor B:\n",
+      " [[[ 0  1  2  3  4]\n",
+      "  [ 5  6  7  8  9]\n",
+      "  [10 11 12 13 14]\n",
+      "  [15 16 17 18 19]]\n",
+      "\n",
+      " [[20 21 22 23 24]\n",
+      "  [25 26 27 28 29]\n",
+      "  [30 31 32 33 34]\n",
+      "  [35 36 37 38 39]]\n",
+      "\n",
+      " [[40 41 42 43 44]\n",
+      "  [45 46 47 48 49]\n",
+      "  [50 51 52 53 54]\n",
+      "  [55 56 57 58 59]]]\n"
      ]
     }
    ],
    "source": [
     "print(\"vector B:\\n\",b)\n",
-    "B=b.reshape((5,5))\n",
-    "print(\"matrix B:\\n\",B)\n",
-    "print(\"matrix B part:\\n\",B[1:-1,1:-1])"
+    "B=b.reshape((3,4,5))\n",
+    "print(\"tensor B:\\n\",B)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 索引"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(B[0,1,2])\n",
+    "print(B[0][1][2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 切片"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[ 0,  1],\n",
+       "        [ 5,  6]],\n",
+       "\n",
+       "       [[20, 21],\n",
+       "        [25, 26]]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "B[0:2,:,:]\n",
+    "B[[0,2],:,:]\n",
+    "B[...,0:1]\n",
+    "B[None,...]\n",
+    "\n",
+    "s=slice(0,2,1)\n",
+    "B[s,s,s]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## 张量合并"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(6, 5)\n",
+      "(3, 10)\n",
+      "(3, 2, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "A1=np.ones((3,5))\n",
+    "A2=np.ones((3,5))\n",
+    "\n",
+    "AA=np.concatenate([A1,A2],axis=0)\n",
+    "print(A.shape)\n",
+    "\n",
+    "AA2=np.concatenate([A1,A2],axis=1)\n",
+    "print(AA2.shape)\n",
+    "\n",
+    "AA3=np.stack([A1,A2],axis=1)\n",
+    "print(AA3.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 读取与保存"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "### 打开文件\n",
+    "\n",
+    "f=open(\"a.txt\",'w')\n",
+    "f.close()\n",
+    "\n",
+    "### 保存数组，读取数组\n",
+    "np.savez(\"A1.npz\",A1=A1,A2=A2)\n",
+    "A1=np.load(\"A1.npz\")[\"A1\"]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 面向对象"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass():\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "    def add(self,y):\n",
+    "        self.x+=y\n",
+    "    def show_x(self):\n",
+    "        print(self.x)\n",
+    "        \n",
+    "mc=MyClass(1)\n",
+    "mc.add(2)\n",
+    "mc.show_x()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Lambda 函数"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "add=lambda x,y:x+y\n",
+    "add(3,4)"
+   ]
   }
  ],
  "metadata": {
