--- a/ai4sc0/pytorch_func.ipynb
+++ b/ai4sc0/pytorch_func.ipynb
@@ -16,13 +16,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:50.382326Z",
+     "start_time": "2023-04-14T07:33:50.377880Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tensor([[1., 2., 3.],\n",
+      "        [2., 4., 6.],\n",
+      "        [3., 6., 9.]])\n",
+      "tensor([[[ 1.,  2.,  3.],\n",
+      "         [ 2.,  4.,  6.],\n",
+      "         [ 3.,  6.,  9.]],\n",
+      "\n",
+      "        [[ 4.,  8., 12.],\n",
+      "         [ 8., 16., 24.],\n",
+      "         [12., 24., 36.]],\n",
+      "\n",
+      "        [[ 9., 18., 27.],\n",
+      "         [18., 36., 54.],\n",
+      "         [27., 54., 81.]]])\n",
       "tensor([[1., 2., 3.],\n",
       "        [2., 4., 6.],\n",
       "        [3., 6., 9.]])\n",
@@ -62,13 +81,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:51.124633Z",
+     "start_time": "2023-04-14T07:33:50.384656Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([4, 50, 400]) torch.Size([4, 50, 400]) torch.Size([4, 1, 400])\n",
       "torch.Size([4, 50, 400]) torch.Size([4, 50, 400]) torch.Size([4, 1, 400])\n"
      ]
     }
@@ -169,16 +194,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:51.132848Z",
+     "start_time": "2023-04-14T07:33:51.126517Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor(0.7861), tensor(0.7861))"
+       "(tensor(0.9999), tensor(0.9999))"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor(0.9999), tensor(0.9999))"
+      ]
+     },
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,19 +242,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 11,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:51.150944Z",
+     "start_time": "2023-04-14T07:33:51.134537Z"
+    }
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(tensor([ 0.7089,  0.9412, -0.5384,  0.9520,  0.8684,  0.6372,  0.9994,  0.4855,\n",
-       "         -0.4947,  0.0159]),\n",
-       " tensor([ 0.7089,  0.9412, -0.5384,  0.9520,  0.8684,  0.6372,  0.9994,  0.4855,\n",
-       "         -0.4947,  0.0159]))"
+       "(tensor([ 0.3396,  0.8663,  0.8830,  0.7084,  0.9351, -0.1285, -0.0045,  0.8071,\n",
+       "         -0.1174,  0.9670]),\n",
+       " tensor([ 0.3396,  0.8663,  0.8830,  0.7084,  0.9351, -0.1285, -0.0045,  0.8071,\n",
+       "         -0.1174,  0.9670]))"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 0.3396,  0.8663,  0.8830,  0.7084,  0.9351, -0.1285, -0.0045,  0.8071,\n",
+       "         -0.1174,  0.9670]),\n",
+       " tensor([ 0.3396,  0.8663,  0.8830,  0.7084,  0.9351, -0.1285, -0.0045,  0.8071,\n",
+       "         -0.1174,  0.9670]))"
+      ]
+     },
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,8 +294,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 12,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:51.165143Z",
+     "start_time": "2023-04-14T07:33:51.153503Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -249,31 +312,69 @@
     {
      "data": {
       "text/plain": [
-       "(tensor([ 0.9817,  0.9570, -0.8342,  0.9178,  0.9991,  0.6591,  0.9792,  0.7516,\n",
-       "          0.9374, -0.3117]),\n",
-       " tensor([[ 0.9817,  0.0000, -0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "(tensor([ 0.9992,  0.7487,  0.9434,  0.9032,  0.9164,  0.6165,  0.5111,  1.0000,\n",
+       "          0.7079, -0.1347]),\n",
+       " tensor([[ 0.9992,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.9570, -0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "         [ 0.0000,  0.7487,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.8342,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "         [ 0.0000,  0.0000,  0.9434,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.9178,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.9032,  0.0000,  0.0000,  0.0000,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.0000,  0.9991,  0.0000,  0.0000,  0.0000,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.9164,  0.0000,  0.0000,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.0000,  0.0000,  0.6591,  0.0000,  0.0000,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.6165,  0.0000,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.0000,  0.0000,  0.0000,  0.9792,  0.0000,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.5111,  0.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.7516,\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
        "           0.0000, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "           0.9374, -0.0000],\n",
-       "         [ 0.0000,  0.0000, -0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
-       "           0.0000, -0.3117]]))"
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.7079, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.1347]]))"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 10]) torch.Size([10]) torch.Size([10])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([ 0.9992,  0.7487,  0.9434,  0.9032,  0.9164,  0.6165,  0.5111,  1.0000,\n",
+       "          0.7079, -0.1347]),\n",
+       " tensor([[ 0.9992,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.7487,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.9434,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.9032,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.9164,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.6165,  0.0000,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.5111,  0.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  1.0000,\n",
+       "           0.0000, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.7079, -0.0000],\n",
+       "         [ 0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,  0.0000,\n",
+       "           0.0000, -0.1347]]))"
+      ]
+     },
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -291,13 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
-   "metadata": {},
+   "execution_count": 13,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:51.199268Z",
+     "start_time": "2023-04-14T07:33:51.167656Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "torch.Size([10, 2, 10, 2, 10, 2]) torch.Size([10, 2])\n",
       "torch.Size([10, 2, 10, 2, 10, 2]) torch.Size([10, 2])\n"
      ]
     }
@@ -321,13 +428,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:33:51.262010Z",
+     "start_time": "2023-04-14T07:33:51.201449Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "x.shape=torch.Size([1000, 2]),y.shape=torch.Size([1000, 3]),y2.shape=torch.Size([1000, 3])\n",
+      "dy_dx_1.shape=torch.Size([1000, 3, 2]),dy_dx_2.shape=torch.Size([1000, 3, 2])\n",
+      "ddy_dxx.shape=torch.Size([1000, 3, 2, 2]),ddy_dxx2.shape=torch.Size([1000, 3, 2, 2]),ddy_dxx3.shape=torch.Size([1000, 3, 2, 2])\n",
       "x.shape=torch.Size([1000, 2]),y.shape=torch.Size([1000, 3]),y2.shape=torch.Size([1000, 3])\n",
       "dy_dx_1.shape=torch.Size([1000, 3, 2]),dy_dx_2.shape=torch.Size([1000, 3, 2])\n",
       "ddy_dxx.shape=torch.Size([1000, 3, 2, 2]),ddy_dxx2.shape=torch.Size([1000, 3, 2, 2]),ddy_dxx3.shape=torch.Size([1000, 3, 2, 2])\n"
@@ -389,7 +504,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
