--- a/ai4sc0/python_example2_vs_matlab.ipynb
+++ b/ai4sc0/python_example2_vs_matlab.ipynb
@@ -19,7 +19,12 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:38.293028Z",
+     "start_time": "2023-04-14T07:30:38.288098Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -55,8 +60,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:38.371122Z",
+     "start_time": "2023-04-14T07:30:38.294717Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -75,8 +85,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:38.379085Z",
+     "start_time": "2023-04-14T07:30:38.374168Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -119,8 +134,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
+   "execution_count": 4,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:38.385205Z",
+     "start_time": "2023-04-14T07:30:38.380804Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -145,8 +165,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
+   "execution_count": 5,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:38.410976Z",
+     "start_time": "2023-04-14T07:30:38.386636Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -158,7 +183,7 @@
        "        [25, 26]]])"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,8 +207,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:47.746991Z",
+     "start_time": "2023-04-14T07:30:47.737816Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -200,7 +230,7 @@
     "A2=np.ones((3,5))\n",
     "\n",
     "AA=np.concatenate([A1,A2],axis=0)\n",
-    "print(A.shape)\n",
+    "print(AA.shape)\n",
     "\n",
     "AA2=np.concatenate([A1,A2],axis=1)\n",
     "print(AA2.shape)\n",
@@ -218,8 +248,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
+   "execution_count": 8,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:50.076941Z",
+     "start_time": "2023-04-14T07:30:50.067447Z"
+    }
+   },
    "outputs": [],
    "source": [
     "### 打开文件\n",
@@ -241,8 +276,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:50.984506Z",
+     "start_time": "2023-04-14T07:30:50.976372Z"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -275,8 +315,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-04-14T07:30:52.819030Z",
+     "start_time": "2023-04-14T07:30:52.811486Z"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -284,7 +329,7 @@
        "7"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +356,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.9"
   }
  },
  "nbformat": 4,
