--- a/ai4sc0/python_example1_numpy.ipynb
+++ b/ai4sc0/python_example1_numpy.ipynb
@@ -4,18 +4,169 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Python 例1: 基于NumPy的基本操作"
+    "# Python 示例"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 基本数据类型"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3.2 (1+2j)\n"
+     ]
+    }
+   ],
    "source": [
-    "import numpy as np\n",
-    "import scipy\n",
-    "import matplotlib.pyplot as plt"
+    "# Numeric Types\n",
+    "num_int=1\n",
+    "num_float=3.2\n",
+    "num_complex=1+2j\n",
+    "print(num_int,num_float,num_complex)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello 1+1=2 1+1=2\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String\n",
+    "string_s=\"hello\"\n",
+    "string_m=\"1+1={}\".format(2)\n",
+    "string_f=f\"1+1={1+1}\"\n",
+    "print(string_s,string_m,string_f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 3, 4, 5] (1, 2, 3, 4, 5)\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "[2, 4, 6, 8, 10]"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Sequence\n",
+    "seq_list=[1,2,3,4,5]\n",
+    "seq_tuple=(1,2,3,4,5)\n",
+    "seq_range=range(5)\n",
+    "print(seq_list,seq_tuple)\n",
+    "for a in seq_list:\n",
+    "    print(a)\n",
+    "\n",
+    "[a+b for a,b in zip(seq_list,seq_tuple)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Boolean or<and<not\n",
+    "t=True\n",
+    "f=False\n",
+    "c=t or f and t and (not t)\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 's'}\n",
+      "{1: 1, 2: 2, 'three': 3, 'hello': 'world'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set and Dict\n",
+    "set_set={1,2,\"s\",True}\n",
+    "print(set_set)\n",
+    "\n",
+    "dict_dict={1:1,2:2,\"three\":3,string_s:\"world\"}\n",
+    "print(dict_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "class MyClass():\n",
+    "    def __init__(self,x):\n",
+    "        self.x=x\n",
+    "    def add(self,y):\n",
+    "        self.x+=y\n",
+    "    def show_x(self):\n",
+    "        print(self.x)\n",
+    "    def __del__(self):\n",
+    "        print(\"del\")\n",
+    "        \n",
+    "mc=MyClass(1)\n",
+    "mc.add(2)\n",
+    "mc.show_x()"
    ]
   },
   {
@@ -23,6 +174,17 @@
    "metadata": {},
    "source": [
     "## 使用Numpy操作张量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import scipy\n",
+    "import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -101,7 +263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
