--- a/_sources/python_example2_vs_matlab.ipynb
+++ b/_sources/python_example2_vs_matlab.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:38.293028Z",
@@ -55,12 +55,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 创建变量"
+    "## 定义函数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fib(n):\n",
+    "    if n==1 or n==2:\n",
+    "        return 1\n",
+    "    return fib(n-1)+fib(n-2)\n",
+    "for i in range(1,10):\n",
+    "    print(fib(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 张量运算\n",
+    "### 创建张量"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:38.371122Z",
@@ -80,12 +118,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 变量索引"
+    "### 形状"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:38.379085Z",
@@ -134,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:38.385205Z",
@@ -165,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:38.410976Z",
@@ -183,7 +221,7 @@
        "        [25, 26]]])"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,12 +240,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 张量合并"
+    "### 张量合并"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:47.746991Z",
@@ -248,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:50.076941Z",
@@ -271,51 +309,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 面向对象"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-04-14T07:30:50.984506Z",
-     "start_time": "2023-04-14T07:30:50.976372Z"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "3\n"
-     ]
-    }
-   ],
-   "source": [
-    "class MyClass():\n",
-    "    def __init__(self,x):\n",
-    "        self.x=x\n",
-    "    def add(self,y):\n",
-    "        self.x+=y\n",
-    "    def show_x(self):\n",
-    "        print(self.x)\n",
-    "        \n",
-    "mc=MyClass(1)\n",
-    "mc.add(2)\n",
-    "mc.show_x()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Lambda 函数"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2023-04-14T07:30:52.819030Z",
@@ -329,7 +328,7 @@
        "7"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -356,7 +355,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.9"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
