--- a/_sources/pytorch_func.ipynb
+++ b/_sources/pytorch_func.ipynb
@@ -486,6 +486,26 @@
     "\n",
     "> To implement hessian, we could have used jacfwd(jacrev(f)) or jacrev(jacfwd(f)) or any other composition of the two. But forward-over-reverse is typically the most efficient. That’s because in the inner Jacobian computation we’re often differentiating a function wide Jacobian (maybe like a loss function 𝑓:ℝⁿ→ℝ), while in the outer Jacobian computation we’re differentiating a function with a square Jacobian (since ∇𝑓:ℝⁿ→ℝⁿ), which is where forward-mode wins out.\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## More \n",
+    "\n",
+    "https://pytorch.org/tutorials/beginner/basics/autogradqs_tutorial.html\n",
+    "\n",
+    "https://pytorch.org/tutorials/intermediate/per_sample_grads.html\n",
+    "\n",
+    "https://pytorch.org/tutorials/intermediate/jacobians_hessians.html"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
